# smartsuite-crud-chatbot

./: README.md  get_env.py  invokers.py  main.py  prompts.py  pydantic_models.py  pyproject.toml  requirements.txt  tools.py
